--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; url=https://redgie16.github.io/itel-203-bootstrap/activity5/index.html">
+<meta http-equiv="refresh" content="0; url=https://redgie16.github.io/activity5/index.html">
